# universal-wallpad-bridge

./: Cargo.toml  README.md  README_ko.md
.github/ISSUE_TEMPLATE/: 기능-추가-요청.md  버그-제보.md
.github/workflows/: rust.yml
src/: cli.rs  lib.rs  main.rs  serial.rs  things.rs  utils.rs
src/serial/: data.rs  packet.rs
src/serial/data/: binary_switch_packet.rs  floor_heating_packet.rs  realtime_energy_packet.rs  ventilator_packet.rs
src/serial/packet/: hyundai.rs
src/things/: floor_heating.rs  living_room_light.rs  realtime_energy_meter.rs  ventilator.rs
